--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -16,7 +16,7 @@
     "confirm-checkbox-valid-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben, und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
     "3g-proof-label-text": "3-G-Nachweis importieren",
     "remove-proof": "Nachweis entfernen",
-    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige 3-G-Informationen gefunden.",
+    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige 3-G Informationen gefunden.",
     "found-valid-3g": "Es wurde ein gültiger 3-G-Nachweis importiert.",
     "valid-till": "gültig bis ",
     "found-valid-selftest-preCheck": "Es wurde ein lokal gespeicherter Selbsttest gefunden.",
