--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -72,7 +72,7 @@
     "3-g-evidence-green-pass-valid": "grüner Pass auf diesem Gerät importiert und gültig",
     "3-g-evidence-internal-test": "Universitäts interner Test auf diesem Gerät importiert und gültig",
     "status-inactive": "inaktiv",
-    "3-g-evidence-invalid": "kein Gültiger 3-G-Nachweis auf diesem Gerät gefunden",
+    "3-g-evidence-invalid": "kein gültiger 3-G-Nachweis auf diesem Gerät gefunden",
     "3-g-evidence-invalid-text": "Eventuell haben Sie Ihren Nachweis auf einem anderen Gerät importiert, der Nachweis ist nicht mehr gültig oder die Applikation wurde für einen längeren Zeitraum nicht genutzt.",
     "3-g-evidence-maximize-saving": "Fügen Sie die App auf dem Startbildschirm Ihres Smartphones hinzu, um die Speicherdauer des 3-G-Nachweises zu maximieren.",
     "new-ticket": "Neues Ticket anfordern",
@@ -84,7 +84,7 @@
   },
   "show-reference-ticket": {
     "place-name": "Ort",
-    "description": "An dieser Stelle wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist, hängt von dem 3-G-Nachweis ab, der auf dem Gerät der kontrollierten Person importiert ist. Das Referenzticket berechtigt nicht zum Eintritt an die Universität.",
+    "description": "An dieser Stelle wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist, hängt von dem 3-G-Nachweis ab, der auf dem Gerät der kontrollierten Person importiert ist. Das Referenzticket berechtigt nicht für den Zugang zu Räumlichkeiten der Universität.",
     "information-container-body": " Ist ein gültiger grüner Pass auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit GreenCheck validiert werden. Ist ein Selbsttest des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt. Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem QR-Code Scanner erfolgen. Ist ein gültiger Test der Teststraße der TU Graz auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Validierung dieses Tests kann nur mit dem Originaldokument erfolgen.",
     "information-container-headline": "Informationen zum 3-G-Nachweis"
   },
@@ -99,7 +99,7 @@
     "cert-not-valid-error": "Erfüllt nicht die folgenden Regeln: {{error}}",
     "cert-validation-failed-error": "Validierung fehlgeschlagen: {{error}}"
   },
-  "validity-tooltip": "Nach den aktuellen Bestimmungen der {{place}}. Die Gültigkeitsdauer wird bei einer Änderung der Bestimmungen automatisch aktualisiert.",
+  "validity-tooltip": "Nach den aktuellen Bestimmungen der {{place}}. Die Gültigkeitsdauer wird bei einer Änderung der Bestimmungen automatisch aktualisiert. Das Ticket ist nur in elektronischer Form gültig.",
   "delete-btn-text": "Löschen",
   "image-alt-text": "Ticketfoto",
   "loading-message": "Lädt...",
