--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -5,7 +5,7 @@
     "3g-proof-label-text": "Import 3-G-evidence",
     "3g-proof-proof-from": "From",
     "3g-proof-status": "Status",
-    "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location for a certain period of time. This is needed to be allowed to enter a location. Alternatively, you can manually confirm that you are carrying 3-G-evidence and be able to prove it in case of a manual control.",
+    "additional-information": "u can import your Green Pass by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code. ",
     "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
     "confirm-not-checked-body": "Please confirm that the information you have provided is correct and that you are aware that misuse of the greenlight app may lead to legal consequences",
     "confirm-not-checked-title": "Consent not given!",
@@ -13,8 +13,8 @@
     "create-ticket": "Create ticket",
     "create-ticket-success-body": "The acquired entrance ticket for {{place}} was successfully created.",
     "create-ticket-success-title": "Ticket successfully created!",
-    "filepicker-button-title": "Choose File",
-    "filepicker-context": "Choose File for 3-G Verification",
+    "filepicker-button-title": "Choose PDF or image",
+    "filepicker-context": "Choose PDF or image for 3-G Verification",
     "found-valid-3g": "A valid 3-G-evidence was imported.",
     "found-valid-3g-preCheck": "Stored valid 3-G-evidence could be found.",
     "found-valid-selftest": "A self-test was found.",
@@ -65,7 +65,7 @@
     "3-g-evidence-internal-test": "University-internal test imported on this device and valid",
     "3-g-evidence-invalid": "No valid 3-G-evidence found on this device",
     "3-g-evidence-invalid-text": "You may have imported your evidence on another device, the evidence is no longer valid or the application has not been used for a longer period of time.",
-    "3-g-evidence-maximize-saving": "Add the app to the home screen of your smartphone to maximize the storage time of the 3-G evidence. How to do this you can read ",
+    "3-g-evidence-maximize-saving": "Add the app to the home screen of your smartphone to maximize the storage time of the 3-G evidence.",
     "3-g-evidence-selftest": "Self-test imported on this device, manual control necessary",
     "delete-ticket-notfound-body": "No active ticket: {{place}} was found. The ticket has probably already expired or deleted.",
     "delete-ticket-notfound-title": "Ticket not found!",
@@ -80,7 +80,7 @@
     "logged-out-title": "Session expired!",
     "new-ticket": "Request a new ticket",
     "no-3g-evidence": "No 3-G-evidence found",
-    "no-evidence": "No valid stored 3-G-evidence was found. Show your evidence manually or upload new evidence by creating a new ticket.",
+    "no-evidence": "No valid stored 3-G-evidence was found. Show your evidence manually or upload a new evidence by creating a new ticket.",
     "no-tickets-message": "You do not have any tickets!",
     "other-error-body": "An unknown error occurred.",
     "other-error-title": "Error!",
@@ -98,7 +98,7 @@
   },
   "show-reference-ticket": {
     "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G-evidence imported on the controlled person\u0027s device. The reference ticket does not entitle you to enter rooms at the university.",
-    "information-container-body": " If a valid health certitificate is available on this device then its QR-code is displayed and the ticket is shown in color. This QR-code can be checked with GreenCheck. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white. This QR-code cannot be validated by this app, therefore its validation requires a QR-code scanner. If a valid test made by Teststraße of TU Graz is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
+    "information-container-body": "If a valid health certitificate is available on this device then its QR-code is displayed and the ticket is shown in color. This QR-code can be checked with GreenCheck. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white. This QR-code cannot be validated by this app, therefore its validation requires a QR-code scanner. If a valid test made by Teststraße of TU Graz is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
     "information-container-headline": "Information about 3-G-evidence",
     "place-name": "Place"
   },
