--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -97,7 +97,7 @@
     "status-inactive": "inactive"
   },
   "show-reference-ticket": {
-    "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G-evidence imported on the controlled person\u0027s device. The reference ticket does not entitle you to enter rooms at the university.",
+    "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G-evidence imported on the controlled person's device. The reference ticket does not entitle you to enter rooms at the university.",
     "information-container-body": "If a valid health certitificate is available on this device then its QR-code is displayed and the ticket is shown in color. This QR-code can be checked with GreenCheck. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white. This QR-code cannot be validated by this app, therefore its validation requires a QR-code scanner. If a valid test made by Teststraße of TU Graz is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
     "information-container-headline": "Information about 3-G-evidence",
     "place-name": "Place"
