Change 'application' to 'function' in translation files

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -48,7 +48,7 @@
   "date-time": "{{clock}} Uhr am {{date}}",
   "delete-btn-text": "Löschen",
   "error-login-message": "Sie müssen angemeldet sein um diese Funktion nutzen zu können!",
-  "error-permission-message": "Diese Applikation ist aktuell nur für Studierende verfügbar!",
+  "error-permission-message": "Diese Funktion ist aktuell nur für Studierende verfügbar!",
   "file-sink": {
     "modal-close": "Schließen"
   },
