Fix some typos and change texts

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -33,7 +33,7 @@
     "other-error-body": "An unknown error has occurred.",
     "other-error-title": "Error!",
     "photo-not-available-title": "Ticket creation failed!",
-    "photo-not-available-body": "No photo of {{serviceName}} could be loaded. Please try again at a later time.",
+    "photo-not-available-body": "No photo of your student or staff ID card could be loaded from {{serviceName}}. Please try again at a later time.",
     "place-select-title": "Select a place",
     "qr-button-text": "Scan QR code",
     "remove-proof": "Remove evidence",
