--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -33,7 +33,7 @@
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "other-error-title": "Fehler!",
     "photo-not-available-title": "Ticketerstellung fehlgeschlagen!",
-    "photo-not-available-body": "Es konnte kein Foto von {{serviceName}} geladen werden. Bitte versuchen Sie es zu einem späteren Zeitpunkt noch einmal.",
+    "photo-not-available-body": "Es konnte kein Foto von Ihrem Studierenden- oder Bedienstetenausweis aus {{serviceName}} geladen werden. Bitte versuchen Sie es zu einem späteren Zeitpunkt noch einmal.",
     "place-select-title": "Ticket für",
     "qr-button-text": "QR-Code scannen",
     "remove-proof": "Nachweis entfernen",
