Refactor code of ticket

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -32,8 +32,6 @@
     "not-same-person": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zu geordnet werden.",
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "other-error-title": "Fehler!",
-    "photo-not-available-title": "Ticketerstellung fehlgeschlagen!",
-    "photo-not-available-body": "Es konnte kein Foto von Ihrem Studierenden- oder Bedienstetenausweis aus {{serviceName}} geladen werden. Bitte versuchen Sie es zu einem späteren Zeitpunkt noch einmal.",
     "place-select-title": "Ticket für",
     "qr-button-text": "QR-Code scannen",
     "remove-proof": "Nachweis entfernen",
@@ -47,8 +45,9 @@
   },
   "date-time": "{{clock}} Uhr am {{date}}",
   "delete-btn-text": "Löschen",
+  "entry-ticket": "Eintrittsticket",
   "error-login-message": "Sie müssen angemeldet sein um diese Funktion nutzen zu können!",
-  "error-permission-message": "Diese Funktion ist aktuell nur für Studierende verfügbar!",
+  "error-permission-message": "Diese Applikation ist aktuell nur für Studierende verfügbar!",
   "file-sink": {
     "modal-close": "Schließen"
   },
@@ -58,7 +57,11 @@
   },
   "image-alt-text": "Ticketfoto",
   "loading-message": "Lädt...",
+  "loading-message-ticket": "Ticket wird geladen ...",
+  "no-tickets-message": "Sie besitzen derzeit keine Tickets!",
   "reload": "Aktualisieren",
+  "reload-error-body": "Die Aktualisierung schlug fehl. Prüfen Sie Ihre Internetverbindung, loggen Sie sich neu ein oder probieren Sie es später noch einmal.",
+  "reload-error-title": "Aktualisierung fehlgeschlagen",
   "reload-failed": "Automatische Aktualisierung fehlgeschlagen",
   "show-active-tickets": {
     "3-g-evidence": "3-G-Nachweis",
@@ -73,27 +76,21 @@
     "delete-ticket-notfound-title": "Ticket nicht gefunden!",
     "delete-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich gelöscht.",
     "delete-ticket-success-title": "Ticket erfolgreich gelöscht!",
-    "entry-ticket": "Eintrittsticket",
     "internal-test-found": "Universitätsinterner Test gefunden",
     "internal-test-text": "Der universitätsinterne Test wurde beim Import validiert. Eine manuelle Kontrolle ist nur mit dem Originaldokument möglich.",
     "invalid-evidence": "Falls der 3-G-Nachweis nicht mehr gültig ist, können Sie ein neues Ticket erstellen und einen neuen Nachweis hochladen.",
-    "loading-message-ticket": "Ticket wird geladen ...",
     "logged-out-body": "Die Sitzung ist abgelaufen. Bitte melden Sie sich erneut an.",
     "logged-out-title": "Sitzung abgelaufen!",
     "new-ticket": "Neues Ticket anfordern",
     "no-3g-evidence": "Kein 3-G-Nachweis gefunden",
     "no-evidence": "Es wurde kein gültiger gespeicherter 3-G-Nachweis gefunden. Zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket erstellen.",
-    "no-tickets-message": "Sie besitzen derzeit keine Tickets!",
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "other-error-title": "Fehler!",
-    "reload-error-body": "Die Aktualisierung schlug fehl. Prüfen Sie Ihre Internetverbindung, loggen Sie sich neu ein oder probieren Sie es später noch einmal.",
-    "reload-error-title": "Aktualisierung fehlgeschlagen",
     "self-test": "Selbsttest",
     "self-test-found": "3-G-Nachweis: Selbsttest gefunden",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
     "self-test-link": "Link zum Test",
     "show-btn-text": "Zeigen",
-    "show-ticket-title": "Ticket: ",
     "status": "Status: ",
     "status-active": "aktiv",
     "status-inactive": "inaktiv"
@@ -104,6 +101,7 @@
     "information-container-headline": "Informationen zum 3-G-Nachweis",
     "place-name": "Ort"
   },
+  "show-ticket-title": "Ticket: ",
   "valid-till": "Voraussichtlich gültig bis ",
   "validity-tooltip": "Nach den aktuellen Bestimmungen der {{place}}. Die Gültigkeitsdauer wird bei einer Änderung der Bestimmungen automatisch aktualisiert.",
   "validity-tooltip-ticket-text": "Das Ticket ist nur in elektronischer Form gültig."
