--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -32,8 +32,6 @@
     "not-same-person": "The person in the uploaded evidence does not match the person logged in.",
     "other-error-body": "An unknown error has occurred.",
     "other-error-title": "Error!",
-    "photo-not-available-title": "Ticket creation failed!",
-    "photo-not-available-body": "No photo of your student or staff ID card could be loaded from {{serviceName}}. Please try again at a later time.",
     "place-select-title": "Select a place",
     "qr-button-text": "Scan QR code",
     "remove-proof": "Remove evidence",
@@ -47,8 +45,9 @@
   },
   "date-time": "{{clock}} on {{date}}",
   "delete-btn-text": "Delete",
+  "entry-ticket": "Entry Ticket",
   "error-login-message": "You need to be logged in to use this function!",
-  "error-permission-message": "This function is currently only available for students!",
+  "error-permission-message": "This application is currently only available for students!",
   "file-sink": {
     "modal-close": "Close"
   },
@@ -58,7 +57,11 @@
   },
   "image-alt-text": "Ticket image",
   "loading-message": "Loading...",
+  "loading-message-ticket": "Loading the ticket ...",
+  "no-tickets-message": "You do not have any tickets!",
   "reload": "Refresh",
+  "reload-error-body": "The update failed. Check your internet connection, log in again or try again later.",
+  "reload-error-title": "Update failed",
   "reload-failed": "Automatic update failed",
   "show-active-tickets": {
     "3-g-evidence": "3-G-evidence",
@@ -73,37 +76,32 @@
     "delete-ticket-notfound-title": "Ticket not found!",
     "delete-ticket-success-body": "The ticket for {{place}} was successfully deleted.",
     "delete-ticket-success-title": "Ticket successfully deleted!",
-    "entry-ticket": "Entry Ticket",
     "internal-test-found": "University-internal test found",
     "internal-test-text": "The university-internal test was validated during the import. A manual check is only possible with the original document.",
     "invalid-evidence": "If the 3-G-evidence is no longer valid, you can create a new ticket and upload a new evidence.",
-    "loading-message-ticket": "Loading the ticket ...",
     "logged-out-body": "The session has expired. Please log in again.",
     "logged-out-title": "Session expired!",
     "new-ticket": "Request a new ticket",
     "no-3g-evidence": "No 3-G-evidence found",
     "no-evidence": "No valid stored 3-G-evidence was found. Show your evidence manually or upload a new evidence by creating a new ticket.",
-    "no-tickets-message": "You do not have any tickets!",
     "other-error-body": "An unknown error occurred.",
     "other-error-title": "Error!",
-    "reload-error-body": "The update failed. Check your internet connection, log in again or try again later.",
-    "reload-error-title": "Update failed",
     "self-test": "self-test",
     "self-test-found": "3-G-evidence: Self-test found",
     "self-test-information": "Please check whether the evidence is still valid.",
     "self-test-link": "Link to the test",
     "show-btn-text": "Show",
-    "show-ticket-title": "Ticket: ",
     "status": "Status: ",
     "status-active": "active",
     "status-inactive": "inactive"
   },
   "show-reference-ticket": {
-    "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G-evidence imported on the controlled person's device. The reference ticket does not entitle you to enter rooms at the university.",
+    "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G-evidence imported on the controlled person\u0027s device. The reference ticket does not entitle you to enter rooms at the university.",
     "information-container-body": "If a valid health certificate is available on this device then its QR code is displayed and the ticket is shown in color. This QR code can be checked with GreenCheck. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR code is displayed and the ticket is shown in black and white. This QR code cannot be validated by this app, therefore its validation requires a QR code scanner. If a valid university-internal test is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
     "information-container-headline": "Information about 3-G-evidence",
     "place-name": "Place"
   },
+  "show-ticket-title": "Ticket: ",
   "valid-till": "Probably valid until ",
   "validity-tooltip": "According to the current regulations of {{place}}. The validity period is automatically updated when the regulations change.",
   "validity-tooltip-ticket-text": "The ticket is only valid in electronic form."
