--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -28,12 +28,13 @@
     "manage-tickets-text": "Active tickets could be found. You can manage your active tickets at: ",
     "manual-uploading-message": "Search for valid QR code...",
     "manually-button-text": "Upload File",
+    "no-photo-body": "There is no valid photo of your student or staff ID in {{serviceName}}. Please contact the studies department.",
     "no-qr-code": "No QR code found!",
     "not-same-person": "The person in the uploaded evidence does not match the person logged in.",
     "other-error-body": "An unknown error has occurred.",
     "other-error-title": "Error!",
-    "photo-not-available-title": "Ticket creation failed!",
     "photo-not-available-body": "No photo of your student or staff ID card could be loaded from {{serviceName}}. Please try again at a later time.",
+    "photo-not-available-title": "Ticket creation failed!",
     "place-select-title": "Select a place",
     "qr-button-text": "Scan QR code",
     "remove-proof": "Remove evidence",
@@ -99,7 +100,7 @@
     "status-inactive": "inactive"
   },
   "show-reference-ticket": {
-    "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G-evidence imported on the controlled person's device. The reference ticket does not entitle you to enter rooms at the university.",
+    "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G-evidence imported on the controlled person\u0027s device. The reference ticket does not entitle you to enter rooms at the university.",
     "information-container-body": "If a valid health certificate is available on this device then its QR code is displayed and the ticket is shown in color. This QR code can be checked with GreenCheck. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR code is displayed and the ticket is shown in black and white. This QR code cannot be validated by this app, therefore its validation requires a QR code scanner. If a valid university-internal test is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
     "information-container-headline": "Information about 3-G-evidence",
     "place-name": "Place"
